// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Traces table component renders empty traces table message 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrow10"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Traces
            </span>
            <span
              class="panel-title-count"
            >
               (0)
            </span>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiSpacer euiSpacer--xl"
      />
      <div
        class="euiEmptyPrompt"
      >
        <h2
          class="euiTitle euiTitle--medium"
        >
          No matches
        </h2>
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiText euiText--small"
            >
              No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
               
              Configure your custom indexes in
               
              <button
                class="euiLink euiLink--primary"
                type="button"
              >
                advanced settings
              </button>
            </div>
          </div>
        </span>
      </div>
      <div
        class="euiSpacer euiSpacer--xl"
      />
    </div>
  </div>
</body>
`;

exports[`Traces table component renders jaeger traces table 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrow10"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Traces
            </span>
            <span
              class="panel-title-count"
            >
               (1)
            </span>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiBasicTable"
      >
        <div>
          <div
            class="euiTableHeaderMobile"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              />
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiTableSortMobile"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownRight"
                  >
                    <div
                      class="euiPopover__anchor"
                    >
                      <button
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                              fill-rule="non-zero"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text"
                          >
                            Sorting
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <table
            class="euiTable euiTable--responsive euiTable--auto"
            id="random_html_id"
            tabindex="-1"
          >
            <caption
              class="euiScreenReaderOnly euiTableCaption"
            />
            <thead>
              <tr>
                <th
                  aria-live="polite"
                  aria-sort="ascending"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_trace_id_0"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Trace Id"
                      >
                        Trace Id
                      </span>
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiTableSortIcon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 4.207v8.237c0 .307-.224.556-.5.556s-.5-.249-.5-.556V4.207L2.904 8.303a.5.5 0 0 1-.707-.707l4.242-4.242a1.5 1.5 0 0 1 2.122 0l4.242 4.242a.5.5 0 1 1-.707.707L8 4.207Z"
                        />
                      </svg>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_latency_1"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Latency (ms)"
                      >
                        Latency (ms)
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_error_count_2"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Errors"
                      >
                        Errors
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_last_updated_3"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Last updated"
                      >
                        Last updated
                      </span>
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="euiTableRow"
              >
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Trace Id
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <a
                          class="euiLink euiLink--primary"
                          data-test-subj="trace-link"
                          href="#/trace_analytics/traces/00079a615e31e61766fcb20b557051c1"
                          rel="noreferrer"
                        >
                          <div
                            class="euiText euiText--small traces-table traces-table-trace-id"
                            title="00079a615e31e61766fcb20b557051c1"
                          >
                            00079a615e31e61766fcb20b557051c1
                          </div>
                        </a>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            aria-label="Copy trace id"
                            class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--small"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 2.729V2a1 1 0 0 1 1-1h2v1H1v12h4v1H1a1 1 0 0 1-1-1V2.729zM12 5V2a1 1 0 0 0-1-1H9v1h2v3h1zm-1 1h2v9H6V6h5V5H6a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1h-2v1z"
                              />
                              <path
                                d="M7 10h5V9H7zM7 8h5V7H7zM7 12h5v-1H7zM7 14h5v-1H7zM9 2V1a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v1h1V1h4v1h1ZM3 3h6V2H3z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrow3"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Latency (ms)
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText"
                  >
                    <span
                      class="euiTableCellContent__text"
                    >
                      19.91
                    </span>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Errors
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    No
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Last updated
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--overflowingContent"
                  >
                    11/10/2020 09:55:45
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorUpRight"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                    data-test-subj="tablePaginationPopoverButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        Rows per page
                        : 
                        10
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <nav
                class="euiPagination"
              >
                <button
                  aria-label="Previous page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-previous"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.843 13.069 6.232 8.384a.546.546 0 0 1 0-.768l4.61-4.685a.552.552 0 0 0 0-.771.53.53 0 0 0-.759 0l-4.61 4.684a1.65 1.65 0 0 0 0 2.312l4.61 4.684a.53.53 0 0 0 .76 0 .552.552 0 0 0 0-.771Z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
                <ul
                  class="euiPagination__list"
                >
                  <li
                    class="euiPagination__item"
                  >
                    <button
                      aria-controls="random_html_id"
                      aria-current="true"
                      aria-label="Page 1 of 1"
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                      data-test-subj="pagination-button-0"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonEmpty__content"
                      >
                        <span
                          class="euiButtonEmpty__text"
                        >
                          1
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
                <button
                  aria-label="Next page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-next"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
                      fill-rule="nonzero"
                    />
                  </svg>
                </button>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Traces table component renders traces table 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrow10"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="panel-title"
            >
              Traces
            </span>
            <span
              class="panel-title-count"
            >
               (1)
            </span>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <hr
        class="euiHorizontalRule euiHorizontalRule--full"
      />
      <div
        class="euiBasicTable"
      >
        <div>
          <div
            class="euiTableHeaderMobile"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              />
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiTableSortMobile"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownRight"
                  >
                    <div
                      class="euiPopover__anchor"
                    >
                      <button
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text"
                          >
                            Sorting
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <table
            class="euiTable euiTable--responsive euiTable--auto"
            id="random_html_id"
            tabindex="-1"
          >
            <caption
              class="euiScreenReaderOnly euiTableCaption"
            />
            <thead>
              <tr>
                <th
                  aria-live="polite"
                  aria-sort="ascending"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_trace_id_0"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Trace Id"
                      >
                        Trace Id
                      </span>
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoading euiTableSortIcon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_trace_group_1"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Trace group"
                      >
                        Trace group
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_latency_2"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Duration (ms)"
                      >
                        Duration (ms)
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_percentile_in_trace_group_3"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Percentile in trace group"
                      >
                        <div>
                          Percentile in trace group
                        </div>
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_error_count_4"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent euiTableCellContent--alignRight"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Errors"
                      >
                        Errors
                      </span>
                    </span>
                  </button>
                </th>
                <th
                  aria-live="polite"
                  aria-sort="none"
                  class="euiTableHeaderCell"
                  data-test-subj="tableHeaderCell_last_updated_5"
                  role="columnheader"
                  scope="col"
                >
                  <button
                    class="euiTableHeaderButton"
                    data-test-subj="tableHeaderSortButton"
                    type="button"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Last updated"
                      >
                        Last updated
                      </span>
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="euiTableRow"
              >
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Trace Id
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                    >
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <a
                          class="euiLink euiLink--primary"
                          data-test-subj="trace-link"
                          href="#/trace_analytics/traces/00079a615e31e61766fcb20b557051c1"
                          rel="noreferrer"
                        >
                          <div
                            class="euiText euiText--small traces-table traces-table-trace-id"
                            title="00079a615e31e61766fcb20b557051c1"
                          >
                            00079a615e31e61766fcb20b557051c1
                          </div>
                        </a>
                      </div>
                      <div
                        class="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <span
                          class="euiToolTipAnchor"
                        >
                          <button
                            aria-label="Copy trace id"
                            class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--small"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Trace group
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiText euiText--small"
                    >
                      HTTP GET
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Duration (ms)
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                  >
                    19.91
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    <div>
                      Percentile in trace group
                    </div>
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    <div
                      class="euiText euiText--small"
                    >
                      30th
                    </div>
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Errors
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
                  >
                    No
                  </div>
                </td>
                <td
                  class="euiTableRowCell"
                >
                  <div
                    class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                  >
                    Last updated
                  </div>
                  <div
                    class="euiTableCellContent euiTableCellContent--overflowingContent"
                  >
                    11/10/2020 09:55:45
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorUpRight"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                    data-test-subj="tablePaginationPopoverButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        Rows per page
                        : 
                        10
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <nav
                class="euiPagination"
              >
                <button
                  aria-label="Previous page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-previous"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </button>
                <ul
                  class="euiPagination__list"
                >
                  <li
                    class="euiPagination__item"
                  >
                    <button
                      aria-controls="random_html_id"
                      aria-current="true"
                      aria-label="Page 1 of 1"
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                      data-test-subj="pagination-button-0"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonEmpty__content"
                      >
                        <span
                          class="euiButtonEmpty__text"
                        >
                          1
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
                <button
                  aria-label="Next page"
                  class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                  data-test-subj="pagination-button-next"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </button>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
